# agentic-rag

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
demo/: __init__.py  run_demo.py
src/: __init__.py  config.py
src/agents/: __init__.py  rag_agent.py
src/data/: __init__.py  firecrawl_loader.py  pdf_loader.py
src/embeddings/: __init__.py  ollama_embeddings.py
src/guardrails/: __init__.py  validators.py
src/llm/: __init__.py  gemini.py
src/memory/: __init__.py  zep_memory.py
src/retrieval/: __init__.py  pinecone_store.py
tests/: __init__.py  conftest.py  test_agent.py  test_config.py  test_data_loader.py  test_embeddings.py  test_guardrails.py  test_llm.py  test_memory.py  test_retrieval.py
